--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-icons": "^5.1.0",
     "recharts": "^2.12.6",
     "sharp": "^0.33.3",
     "sonner": "^1.4.41",
